welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:30: error: '<-' expected but ')' found.
		for(n-> 1 to hauteur){
                                    ^Array1:36: error: illegal start of simple expression
	}
        ^